<resources>
    <string name="app_name">智慧社区</string>
    <!-- 登录注册按钮-->
    <string name="login">登录</string>
    <string name="to_login">去登录</string>
    <string name="register">注册</string>
    <string name="to_register">去注册</string>
    <!-- 登录框 -->
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="telephone_hint">请输入手机号码</string>
    <string name="phoneCode_hint">短信验证码</string>
    <!-- 登录标题 -->
    <string name="username_password_login">账号密码登录</string>
    <string name="sms_login">手机短信登录</string>
    <string name="getPhoneCode">获取验证码</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="large_text">本文章为原创，谢绝任何媒体转载图片大小V1导弹是比较落后的，采用机械装置决定飞行的方向和时间，从而决定导弹的攻击点。</string>
    <string name="action_settings">Settings</string>
    <string name="add_good">上架商品</string>
    <string name="cart_less_label">-</string>
    <string name="cart_add_label">+</string>
    <string name="cart_goods_count_init">1</string>
    <!---->
    <string name="not_more">~ 没有更多啦 ~</string>
    <string name="share_to_people">点击分享</string>

    <string name="common_network">当前没有网络连接，请检查网络设置</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <!-- 设置 -->
    <string name="setting_title">设置</string>

    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>

    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>

    <!-- 升级对话框 -->
    <string name="update_title">发现新版本</string>

    <string name="update_content">更新内容</string>

    <string name="update_no">下次再说</string>
    <string name="update_yes">立即更新</string>
    <string name="update_background">后台更新</string>

    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>

    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">立即安装</string>
    <string name="update_status_failed">下载失败</string>

    <string name="update_no_update">当前已是最新版本</string>

    <!-- 分享对话框 -->
    <string name="share_title">分享到&#8230;</string>

    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>

    <string name="share_platform_copy_hint">已复制到剪贴板</string>
    <!-- 关于 -->
    <string name="about_title">关于我们</string>
    <string name="about_author"><font color="#ff6699">roydon</font> gyc</string>

    <string name="about_copyright">Copyright © 2022 &#8211; 2023</string>

    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>

    <!-- 通用的 -->
    <string name="common_loading">加载中&#8230;</string>

    <string name="common_unknown_error">未知错误</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>

    <string name="common_crash_hint">应用出了点小意外，正在重新启动</string>

    <string name="common_network_error">当前网络不可用，请检查网络设置</string>

    <string name="common_video_error_not_support">该视频不适合在此设备上播放</string>
    <string name="common_video_error_unknown">无法播放此视频</string>
    <string name="common_video_error_supplement">错误类型：%d，错误代码：%d</string>

    <string name="common_phone_input_hint">请输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>

    <string name="common_code_input_hint">请输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="common_permission_alert">授权提醒</string>
    <string name="common_permission_fail_1">授权失败，请正确授予权限</string>
    <string name="common_permission_fail_2">获取权限失败，请手动授予权限</string>
    <string name="common_permission_fail_3">获取权限失败，请手动授予%s</string>
    <string name="common_permission_fail_4">没有授予后台定位权限，请您选择"始终允许"</string>
    <string name="common_permission_goto">前往授权</string>

    <string name="common_permission_calendar">日历权限</string>
    <string name="common_permission_camera">相机权限</string>
    <string name="common_permission_contacts">通讯录权限</string>
    <string name="common_permission_location">定位权限</string>
    <string name="common_permission_location_background">后台定位权限</string>
    <string name="common_permission_microphone">麦克风权限</string>
    <string name="common_permission_phone">电话权限</string>
    <string name="common_permission_call_log">通话记录权限</string>
    <string name="common_permission_sensors">身体传感器权限</string>
    <string name="common_permission_activity_recognition">健身运动权限</string>
    <string name="common_permission_sms">短信权限</string>
    <string name="common_permission_storage">存储权限</string>

    <string name="common_permission_install">安装应用权限</string>
    <string name="common_permission_notification">通知栏权限</string>
    <string name="common_permission_window">悬浮窗权限</string>
    <string name="common_permission_setting">系统设置权限</string>

    <string name="common_network_hint">当前没有网络连接，请检查网络设置</string>
    <string name="common_no_more_data">没有更多数据了</string>

    <string name="common_web_ssl_error_title">当前网站安全证书已过期或不可信\n是否继续浏览</string>
    <string name="common_web_ssl_error_allow">继续浏览</string>
    <string name="common_web_ssl_error_reject">返回上一页</string>

    <string name="common_web_location_permission_title">当前网站需要获取您的地理位置</string>
    <string name="common_web_location_permission_allow">授予</string>
    <string name="common_web_location_permission_reject">拒绝</string>

    <string name="common_web_call_phone_title">当前号码 %s</string>
    <string name="common_web_call_phone_allow">拨打</string>
    <string name="common_web_call_phone_reject">取消</string>

    <!-- 0出1进 -->
    <string name="access_out">出</string>
    <string name="access_in">进</string>

    <!-- 布局提示文字 -->
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>

    <!-- 地区对话框 -->
    <string name="address_selecter_title">请选择地区</string>
    <string name="address_selecter_hint">请选择</string>

    <!-- 功能反馈 -->
    <string name="feedback_success">反馈成功</string>

</resources>