<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">

    <include layout="@layout/layout_toolbar" />

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftColor="@color/black"
        app:bar_leftText="@string/setting_language"
        app:bar_rightColor="@color/gray"
        app:bar_rightIcon="@mipmap/icon_right"
        tools:bar_rightHint="@string/setting_language_simple" />

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftColor="@color/black"
        app:bar_leftText="@string/setting_update"
        app:bar_lineVisible="false"
        app:bar_rightColor="@color/gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_buy_btn"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:text="new"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

    </com.roydon.library.layout.SettingBar>

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftColor="@color/black"
        app:bar_leftText="@string/setting_agreement"
        app:bar_rightColor="@color/gray"
        app:bar_rightIcon="@mipmap/icon_right" />

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftColor="@color/black"
        app:bar_leftText="@string/setting_about"
        app:bar_lineVisible="false"
        app:bar_rightColor="@color/gray"
        app:bar_rightIcon="@mipmap/icon_right" />

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftColor="@color/black"
        app:bar_leftText="@string/setting_auto"
        app:bar_lineVisible="false"
        app:bar_rightColor="@color/gray">

        <com.roydon.library.view.SwitchButton
            android:id="@+id/sb_setting_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp" />

    </com.roydon.library.layout.SettingBar>

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftColor="@color/black"
        app:bar_leftText="@string/setting_cache"
        app:bar_lineVisible="false"
        app:bar_rightColor="@color/gray"
        app:bar_rightIcon="@mipmap/icon_right" />

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_setting_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftColor="@color/red"
        app:bar_leftText="@string/setting_exit"
        app:bar_lineVisible="false"
        app:bar_rightColor="@color/gray"
        app:bar_rightIcon="@mipmap/icon_exit" />

    <com.roydon.library.layout.SettingBar
        android:id="@+id/sb_test_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftColor="@color/blue_deep"
        app:bar_leftText="测试titlebar"
        app:bar_lineVisible="false"
        app:bar_rightColor="@color/gray" />
</LinearLayout>