<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/shape_radius"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_goods_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_goods_img"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/avatar_ganyu" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_goods_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="title"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/cv_goods_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_goods_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="￥9.9"
        android:textColor="#EC4242"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cv_goods_img"
        app:layout_constraintTop_toBottomOf="@+id/tv_goods_title" />

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_goods_less"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/cart_less_label"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_goods_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/cart_goods_count_init"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_goods_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/cart_add_label"
            android:textSize="22sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>