<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.LoginActivity">

    <!-- 背景图 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_250dp"
        android:scaleType="fitXY"
        android:src="@mipmap/login_background" />

    <!-- 登录框 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_300dp"
        android:layout_marginTop="@dimen/dimen_200dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_30dp"
            android:paddingRight="@dimen/dimen_30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_icon_24dp"
                    android:layout_height="@dimen/dimen_icon_24dp"
                    android:src="@mipmap/icon_username" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/username_hint"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_3dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:background="@color/element" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_icon_24dp"
                    android:layout_height="@dimen/dimen_icon_24dp"
                    android:src="@mipmap/icon_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20dp"
                    android:background="@null"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

        </LinearLayout>

        <!-- 登录按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_marginLeft="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_50dp"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:background="@drawable/shape_login_button_big"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_22sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>